syntax = "proto3";

package com.android.car.trust.BLEStream;

option java_package = "com.android.car.trust";
option java_outer_classname = "BLEStream";

// A message across a BLE channel.
message BLEMessage {
  // The current version of the protocol.
  int32 version = 1;

  enum OperationType {
    // The contents of the payload are unknown.
    UNKNOWN = 0;

    // The payload contains handshake messages needed to set up encryption.
    ENCRYPTION_HANDSHAKE = 1;

    // The message is an acknowledgment of a previously received message. The
    // payload for this type should be empty.
    ACK = 2;

    // The payload contains a client-specific message.
    CLIENT_MESSAGE = 3;
  }

  // The operation that this message represents.
  OperationType operation = 2;

  // A 1-based packet number. The first message will have a value of "1" rather
  // than "0".
  fixed32 packet_number = 3;

  // The total number of packets in the message stream.
  fixed32 total_packets = 4;

  // Whether the payload field is encrypted.
  bool is_payload_encrypted = 5;

  // The bytes that represent the message content for this packet.
  bytes payload = 6;
}
